--- a/css/components/controller.css
+++ b/css/components/controller.css
@@ -3,11 +3,12 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(7, 1fr);
-    gap: 5px;
+    gap: 3px;
     padding: 20px;
     border: 1px solid #DDDDDD;
     border-radius: 10px;
     font-family: Poppins;
+    /* height: 400px; */
     /* font-family: Balsamiq; */
 }
 
