--- a/css/components/header.css
+++ b/css/components/header.css
@@ -10,24 +10,11 @@
     border: 1px solid #DDDDDD;
 }
 
-.main-header>ul>:first-child {
-    margin-inline-start: 185px;
-}
-
-.main-header>ul>:nth-child(2) {
-    margin-inline-start: 50px;
-}
-
 .main-header>ul>* {
-    /* transition: 0.5s; */
     height: 7vh;
-    /* vertical-align: bottom; */
-    /* align-self: center; */
-    /* justify-self: center; */
 }
 
 .main-header>ul>*:hover {
-    /* transform: scale(1.2); */
     font-weight: 600;
     box-shadow: inset 0 -4px #06FF00;
 }
